<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/secure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/secure_connect"
          android:showAsAction="never" />
    <item android:id="@+id/insecure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/insecure_connect"
          android:showAsAction="never" />
    <item android:id="@+id/discoverable"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/discoverable"
          android:showAsAction="never" />
    <item android:id="@+id/code"
          android:showAsAction="never"
          android:title="@string/code"/>
    <item android:id="@+id/input"
          android:showAsAction="never"
          android:title="@string/input"/>
    <item android:id="@+id/about"
          android:showAsAction="never"
          android:title="@string/about"/>
</menu>
